refactor: refactor and clean up code