@@ -9,31 +9,22 @@ import com.assignment.ecommerce_rookie.repository.UserRepository;
 import com.assignment.ecommerce_rookie.security.jwt.JwtUtils;
 import com.assignment.ecommerce_rookie.security.request.LoginRequest;
 import com.assignment.ecommerce_rookie.security.request.SignUpRequest;
-import com.assignment.ecommerce_rookie.security.response.MessageResponse;
-import com.assignment.ecommerce_rookie.security.response.UserInfoResponse;
+import com.assignment.ecommerce_rookie.security.response.LoginResponse;
 import com.assignment.ecommerce_rookie.security.services.UserDetailsImpl;
 import com.assignment.ecommerce_rookie.service.IAuthService;
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseCookie;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
-import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -62,24 +53,30 @@ public class AuthServiceImpl implements IAuthService {
     }
 
     @Override
-    public UserInfoResponse login(LoginRequest loginRequest) {
+    public LoginResponse login(LoginRequest loginRequest) {
         Authentication authentication = authenticationManager.authenticate(
                 new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
+        String accessToken = jwtUtils.generateAccessToken(userDetails);
 
-        return new UserInfoResponse(
-                userDetails.getId(),
-                userDetails.getUsername(),
-                userDetails.getAuthorities().stream()
+        return buildLoginResponse(userDetails, accessToken);
+    }
+
+    private LoginResponse buildLoginResponse(UserDetailsImpl userDetails, String accessToken) {
+        return LoginResponse.builder()
+                .id(userDetails.getId())
+                .username(userDetails.getUsername())
+                .roles(userDetails.getAuthorities().stream()
                         .map(GrantedAuthority::getAuthority)
-                        .collect(Collectors.toList())
-        );
+                        .toList())
+                .accessToken(accessToken)
+                .build();
     }
 
     @Override
-    public UserInfoResponse refreshAccessToken(String refreshToken) {
+    public LoginResponse refreshAccessToken(String refreshToken) {
         return Optional.ofNullable(refreshToken)
                 .filter(jwtUtils::validateJwtToken)
                 .map(jwtUtils::getUserNameFromJwtToken)
@@ -90,13 +87,7 @@ public class AuthServiceImpl implements IAuthService {
                     );
                     return (UserDetailsImpl) user;
                 })
-                .map(user -> new UserInfoResponse(
-                        user.getId(),
-                        user.getUsername(),
-                        user.getAuthorities().stream()
-                                .map(GrantedAuthority::getAuthority)
-                                .collect(Collectors.toList())
-                ))
+                .map(user -> buildLoginResponse(user, jwtUtils.generateAccessToken(user)))
                 .orElseThrow(() -> new APIException("Invalid or missing refresh token", HttpStatus.UNAUTHORIZED));
     }
 
